force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Custom_Referral__c.field-meta.xml
<CustomField>
    <fullName>CC_Custom_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field to custom referral object.</description>
    <label>Referral</label>
    <referenceTo>CC_Referral__c</referenceTo>
    <relationshipLabel>Preliminary Application References</relationshipLabel>
    <relationshipName>Preliminary_Application_References</relationshipName>
    <type>Lookup</type>
</CustomField>