force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Date__c</fullName>
    <inlineHelpText>Date of registered or certified child care provider</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>