force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>