force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Date_of_Change__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Change__c</fullName>
    <description>Allow the user to enter the date for the status change.</description>
    <label>Date of Change</label>
    <type>Date</type>
</CustomField>