force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Date_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Incorporation__c</fullName>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>