force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Date_of_Inspection_Fire_Marshal__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Inspection_Fire_Marshal__c</fullName>
    <inlineHelpText>Date of Inspection (Fire Marshal Certification)</inlineHelpText>
    <label>Date of Inspection(Fire Marshal)</label>
    <type>Date</type>
</CustomField>