force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Date_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Measurement__c</fullName>
    <label>Date of Measurement</label>
    <type>Date</type>
</CustomField>