force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Declaration_Attestations_Check__c.field-meta.xml
<CustomField>
    <fullName>CC_Declaration_Attestations_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration Attestations Check</label>
    <type>Checkbox</type>
</CustomField>