force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Direction_to_New_child_care_site__c.field-meta.xml
<CustomField>
    <fullName>CC_Direction_to_New_child_care_site__c</fullName>
    <label>Direction to New child care site</label>
    <type>TextArea</type>
</CustomField>