force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Director_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Director_Name__c</fullName>
    <label>CC Director Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>