force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>CC_Doing_Business_As__c</fullName>
    <label>CC Doing Business As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>