force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Drop_In_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Drop_In_Service_Description__c</fullName>
    <label>Drop-In Service Description</label>
    <type>TextArea</type>
</CustomField>