force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Eligibility_Determination__c.field-meta.xml
<CustomField>
    <fullName>CC_Eligibility_Determination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Determination</label>
    <referenceTo>CC_Eligibility_Determination__c</referenceTo>
    <relationshipLabel>Preliminary Application References</relationshipLabel>
    <relationshipName>Preliminary_Application_References</relationshipName>
    <type>Lookup</type>
</CustomField>