force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Employment_History_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Employment_History_Description__c</fullName>
    <label>Employment History Description</label>
    <type>TextArea</type>
</CustomField>