force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Enter_Details__c.field-meta.xml
<CustomField>
    <fullName>CC_Enter_Details__c</fullName>
    <inlineHelpText>I confirm that neither I, nor anyone present in the home, have been investigated for any alleged harm or physical or sexual abuse to children or adults. If this statement is false, I am providing the information required about where the investigation occurred</inlineHelpText>
    <label>Enter Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>