force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Evening_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Evening_Service_Description__c</fullName>
    <label>Evening Service Description</label>
    <type>TextArea</type>
</CustomField>