force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Ever_had_a_child_removed_fromyourhome__c.field-meta.xml
<CustomField>
    <fullName>CC_Ever_had_a_child_removed_fromyourhome__c</fullName>
    <inlineHelpText>At any time, have you had a child removed from your home?</inlineHelpText>
    <label>Ever had a child removed from your home?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>