force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Expiration_Date__c</fullName>
    <formula>CreatedDate + 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>