force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Child_Care_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Child_Care_Address__c</fullName>
    <description>To capture address for Facility Child Care for FCC Amend</description>
    <label>Facility Child Care Address</label>
    <type>Address</type>
</CustomField>