force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Child_Care_Apt_Suit__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Child_Care_Apt_Suit__c</fullName>
    <description>To capture child care apt. suit in application.</description>
    <label>Facility Child Care Apt. Suit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>