force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Child_Care_Other_County__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Child_Care_Other_County__c</fullName>
    <description>To capture child care other county in application.</description>
    <label>Facility Child Care Other County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>