force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Email__c</fullName>
    <description>It is used to store the change during amend process.</description>
    <label>Facility Email</label>
    <type>Email</type>
</CustomField>