force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Email_Old__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Email_Old__c</fullName>
    <label>CC Facility Email Old</label>
    <type>Email</type>
</CustomField>