force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Mailing_Address__c</fullName>
    <description>It is used to store the change during amend process.</description>
    <label>Facility Mailing Address</label>
    <type>Address</type>
</CustomField>