force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Mailing_Other_County__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Mailing_Other_County__c</fullName>
    <description>To capture facility mailing other county in application.</description>
    <label>Facility Mailing Other County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>