force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Mailing_Same_As_Billing__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Mailing_Same_As_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility Mailing Same As Billing Address</label>
    <type>Checkbox</type>
</CustomField>