force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Name_Old__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Name_Old__c</fullName>
    <label>CC Facility Name Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>