force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Phone_Number__c</fullName>
    <description>It is used to store the changes during Amend process</description>
    <label>Facility Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>