force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Physical_Address__c</fullName>
    <description>It is used to store the value during amend process.</description>
    <label>Facility Physical Address</label>
    <type>Address</type>
</CustomField>