force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Physical_Other_County__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Physical_Other_County__c</fullName>
    <description>To capture other physical county in application.</description>
    <label>Facility Physical Other County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>