force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Type__c</fullName>
    <label>CC Facility Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>