force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_False_statements_can_revoke_a_license__c.field-meta.xml
<CustomField>
    <fullName>CC_False_statements_can_revoke_a_license__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I understand that furnishing or making any misleading or false statements or reports anywhere in this application is grounds to revoke, suspend, refuse to issue or refuse to renew a license.</inlineHelpText>
    <label>False statements can revoke a license</label>
    <type>Checkbox</type>
</CustomField>