force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>