force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Have_read_understood_the_questions__c.field-meta.xml
<CustomField>
    <fullName>CC_Have_read_understood_the_questions__c</fullName>
    <inlineHelpText>I have read and understood the questions in this application. I have reviewed my answers to the application questions, and, to the best of my knowledge, the information I have provided and the responses I have given are true.</inlineHelpText>
    <label>Have read and understood the questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>