force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Health_Inspection_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Health_Inspection_Expiration_Date__c</fullName>
    <label>Health Inspection Expiration Date</label>
    <type>Date</type>
</CustomField>