force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_I_will_be_providing_child_care_in__c.field-meta.xml
<CustomField>
    <fullName>CC_I_will_be_providing_child_care_in__c</fullName>
    <label>I will be providing child care in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My home</fullName>
            </value>
            <value>
                <fullName>Parent&apos;s home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>