force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_In_the_past_have_you_been_Registered__c.field-meta.xml
<CustomField>
    <fullName>CC_In_the_past_have_you_been_Registered__c</fullName>
    <inlineHelpText>In the past, have you been a Registered or Certified Child Care Provider</inlineHelpText>
    <label>In the past, have you been a Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>