force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Indoor_square_foot_for_operations__c.field-meta.xml
<CustomField>
    <fullName>CC_Indoor_square_foot_for_operations__c</fullName>
    <label>Indoor(square foot) for operations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>