force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Infant_Toddler_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CC_Infant_Toddler_Capacity__c</fullName>
    <label>Infant / Toddler Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>