force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Investigated_for_abuse_neglectbychild__c.field-meta.xml
<CustomField>
    <fullName>CC_Investigated_for_abuse_neglectbychild__c</fullName>
    <inlineHelpText>At any time, have you been investigated for possible abuse or neglect by the Department, a child welfare agency or law enforcement in another State?</inlineHelpText>
    <label>Investigated for abuse/neglect by child?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>