force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Is_a_first_aid_kit_available__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_a_first_aid_kit_available__c</fullName>
    <inlineHelpText>Is a first aid kit available?</inlineHelpText>
    <label>Is a first aid kit available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>