force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Is_the_play_equipment_safe__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_the_play_equipment_safe__c</fullName>
    <inlineHelpText>Is the play equipment safe?</inlineHelpText>
    <label>Is the play equipment safe?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>