force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Is_this_a_Residential_Location__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_this_a_Residential_Location__c</fullName>
    <label>Is this a Residential Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>