force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Last_Owner_Track__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_Owner_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Owner Track</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>