force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Latest_Pool_Roof_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Latest_Pool_Roof_Inspection_Date__c</fullName>
    <label>Latest Pool Roof Inspection Date</label>
    <type>Date</type>
</CustomField>