force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_License_Capacity_Requested__c.field-meta.xml
<CustomField>
    <fullName>CC_License_Capacity_Requested__c</fullName>
    <label>License Capacity Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>