force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_License_Certificate_Denied_Revoked__c.field-meta.xml
<CustomField>
    <fullName>CC_License_Certificate_Denied_Revoked__c</fullName>
    <label>License/Certificate Denied/Revoked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>