force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Member_Registered_Sex_Offender_Desc__c.field-meta.xml
<CustomField>
    <fullName>CC_Member_Registered_Sex_Offender_Desc__c</fullName>
    <label>Member Registered Sex Offender Descrip</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>